--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=8081
 #logging.file=springboot.log
 #logging.path=/spring/log
 #logging.pattern.file=%d{yyyy-MM-dd} === [%thread] === %-5level === %logger{50} ==== %msg%n
+server.context-path=/crud
+spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
 person.last-name=\u5F20\u4E09${random.uuid}
 person.age=${random.int}
