--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ server.port=8081
 server.context-path=/crud
 spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
+spring.mvc.date-format=yyyy-MM-dd
 
 person.last-name=\u5F20\u4E09${random.uuid}
 person.age=${random.int}
