--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<!--引入其他的Servlet容器-->
+		<!--<dependency>
+			<artifactId>spring-boot-starter-jetty</artifactId>
+			<groupId>org.springframework.boot</groupId>
+		</dependency>-->
 		<!--引入jQuery-->
 		<dependency>
 			<groupId>org.webjars</groupId>
