--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.context-path=/crud
 spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
 spring.mvc.date-format=yyyy-MM-dd
+server.tomcat.uri-encoding=UTF-8
 
 person.last-name=\u5F20\u4E09${random.uuid}
 person.age=${random.int}
