--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,13 @@ server:
   port: 8084
 spring:
   profiles: prod
+
+---
+spring:
+  datasource:
+    username: root
+    password: 6868939597
+    url: jdbc:mysql://localhost:3306/jdbc
+    driver-class-name: com.mysql.jdbc.Driver
+    #schema:
+      #- classpath:department.sql
