--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+        <!--JPA-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 		<!--引入druid数据源-->
 		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
 		<dependency>
